# m3d

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  readme.md
Animation/: SkeletalAnimation.hpp
C++/: MoreTeaPots.sln
C++/.workspace/MoreTeaPots.NativeActivity/: .project
C++/.workspace/MoreTeaPots.Packaging/: .classpath  .project
C++/.workspace/android_native_app_gluelib/: .project
C++/.workspace/cpufeatureslib/: .project
C++/.workspace/ndkhelperlib/: .project
C++/CodeDB/Core-Debug-ARM/: Core.npa  Core.npd  GlobalFileTable.000  GlobalFileTable.001  codedb.lck
C++/CodeDB/Math-Debug-ARM/: GlobalFileTable.000  GlobalFileTable.001  Math.npa  Math.npd  Matrix.npa  Matrix.npd  Quaternion.npa  Quaternion.npd  SIMD_NEON.npa  SIMD_NEON.npd
C++/CodeDB/Math-Debug-x64/: GlobalFileTable.000  GlobalFileTable.001  SIMD_NEON.npa  SIMD_NEON.npd
C++/CodeDB/Math-Debug-x86/: GlobalFileTable.000  GlobalFileTable.001  Math.npa  Math.npd  Matrix.npa  Matrix.npd
C++/CodeDB/Math-Release-ARM/: GlobalFileTable.000  GlobalFileTable.001  Matrix.npa  Matrix.npd
C++/Core/: Allocator.h
C++/Math/: Math.cpp  Math.h  Math.vcxproj  Math.vcxproj.filters  MathBase.h  Matrix.cpp  Matrix.h  NEONvsSSE.h  Quaternion.cpp  Quaternion.h  SIMD_NEON.h  SIMD_SSE.h  test.cpp
C++/UnitTestMath/: UnitTestMath.vcxproj  stdafx.cpp  unittest1.cpp
C++/android_native_app_gluelib/: android_native_app_gluelib.vcxproj
C++/ndkhelperlib/: GLContext.cpp  JNIHelper.cpp  JNIHelper.h  NDKHelper.h  gestureDetector.cpp  gestureDetector.h  interpolator.cpp  ndkhelperlib.vcxproj  perfMonitor.cpp  tapCamera.cpp  tapCamera.h  vecmath.h
Gui/: CMakeLists.txt  Delegate.h  FastDelegate.h  GUIButton.cpp  GUIButton.h  GUICheckBox.cpp  GUICheckBox.h  GUIController.cpp  GUIController.h  GUIElement.cpp  GUIElement.h  GUIEvents.h  GUIImage.cpp  GUIImage.h  GUIPanel.cpp  GUIPanel.h  GUIScreen.h  GUIStructures.h  GUITextCaption.cpp  GUITextCaption.h  IControls.h  testDelegate.cpp
Gui/include/: FastDelegateBind.h  GUIController.h  GUIElement.h  GUIEvents.h  GUIPanel.h  GUIScreen.h
Gui/src/: GUIButton.cpp  GUIController.cpp  GUIImage.cpp  GUIPanel.cpp
Math/: CMakeLists.txt  MathBase.h  Matrix.cpp  Matrix.h  Quaternion.h  SIMD_NEON.cpp  SIMD_NEON.h  SIMD_SSE.cpp  SIMD_SSE.h
Math/include/: Matrix.h  SIMD_NEON.h
Math/test/: test.cpp
Render/: CMakeLists.txt
Render/include/: CommandBuffer.hpp  File.hpp  Mesh.hpp  Renderer.hpp  RendererVulkan.hpp  Scene.hpp  VulkanSwapchain.hpp
Render/src/: CommandBuffer.cpp  Pipeline.cpp  Renderer.cpp  RendererVulkan.cpp  Scene.cpp
VkUtils/: CMakeLists.txt  RendererVulkan.cpp  RendererVulkan.h  RendererVulkan.hpp  Scene.cpp  Scene.h  Scene.hpp  VulkanHelper.hpp  common.cpp  common.hpp  packed_freelist.h  vulkanDebug.cpp  vulkanTextureLoader.hpp  vulkanTools.cpp  vulkanTools.h
VkUtils/include/: CommandBuffer.hpp  File.hpp  Pipeline.hpp  RendererVulkan.hpp  Scene.hpp  VulkanHelper.hpp  VulkanSwapchain.hpp  vulkanDebug.h  vulkanTextureLoader.hpp
VkUtils/src/: CommandBuffer.cpp  File.cpp  Pipeline.cpp  RendererVulkan.cpp  Scene.cpp  vulkanDebug.cpp
cmake/modules/: FindFBX.cmake  FindVulkan.cmake
data/schema/: scene.fbs  scene_data.json  scene_generated.h
examples/: CMakeLists.txt
examples/camera/: RendererVulkan.cpp  camera.cpp  main.cpp
examples/init/: triangle.cpp
tests/: CMakeLists.txt  test_math.cpp
vulkan/: vulkan.sln
vulkan/base/: CMakeLists.txt  common.hpp  vulkanContext.cpp  vulkanContext.hpp  vulkanDebug.h  vulkanTools.cpp
vulkan/vulkan/: main.cpp  vulkan.vcxproj  vulkan.vcxproj.filters
(+108 files in other folders)
